# luzIA-core

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  transfer_learning_alta_resolucao.ipynb
docker/AI/: Dockerfile
src/: config.py  entrypoint.sh  main.py
src/app/: evaluate.py  train.py
src/app/utilities/: cam_models.py  filter_img.py  generic_funcs.py  load_data.py
