[tool.poetry]
name = "luzia-core"
version = "0.1.0"
description = "LuzIA Core"
authors = ["Gabriel Aranha <talk@gabrielaranha.com"]
repository = "https://github.com/likamee/luzIA-core"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.13"
  matplotlib = "^3.5.2"
  pandas = "^2.2.1"
  opencv-python = "^4.6.0.66"
  scikit-image = "^0.22.0"
  scikit-learn = "^1.1.2"
  tensorflow = "^2.16.0"
  python-dotenv = "^0.20.0"
  jupyter = "^1.0.0"
  ipykernel = "^6.15.0"
  seaborn = "^0.11.2"
  plotly = "^5.10.0"


  [tool.poetry.dev-dependencies]
  flake8 = "^4.0.1"
  pre-commit = "2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
